fixes bug 102312 "URL: Href attributes spanning multiple lines are taken to be relative rather than absolute links" r=dougt sr=alecf